@@ -1,8 +1,19 @@
+Sun Jul 20 05:50:52 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/logging/TestLoggerFactory_i.inl:
+        * cuts/utils/logging/TestLoggerFactory_i.cpp:
+        * cuts/utils/logging/TestLogger_i.h:
+        * cuts/utils/logging/TestLogger_i.cpp:
+
+	  . Bug fix where the message queue was not being flushed when
+	    the logger was stopped. This resulted in final messages not 
+	    being placed in the database.
+
 Sun Jul 20 01:50:19 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/logging/TestLogger_i.cpp:
 
-	  . Updated debug messages for the logger.
+          . Updated debug messages for the logger.
 
 Sat Jul 19 08:53:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
